@@ -1,28 +1,29 @@
+import com.android.tools.profgen.ArtProfileKt
+import com.android.tools.profgen.ArtProfileSerializer
+import com.android.tools.profgen.DexFile
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
     id "kotlin-kapt"
     id "kotlin-parcelize"
     id "checkstyle"
-    id "org.sonarqube" version "3.3"
+    id "org.sonarqube" version "4.0.0.2929"
 }
 
 android {
-    compileSdk 31
-    buildToolsVersion '31.0.0'
+    compileSdk 34
+    namespace 'org.schabi.newpipe'
 
     defaultConfig {
         applicationId "org.schabi.newpipe"
         resValue "string", "app_name", "NewPipe"
-        minSdk 19
-        targetSdk 29
-        versionCode 984
-        versionName "0.22.1"
-
-        multiDexEnabled true
+        minSdk 21
+        targetSdk 33
+        versionCode 996
+        versionName "0.26.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
             annotationProcessorOptions {
@@ -49,9 +50,6 @@ android {
             }
         }
 
-        // Keep the release build type at the end of the list to override 'archivesBaseName' of
-        // debug build. This seems to be a Gradle bug, therefore
-        // TODO: update Gradle version
         release {
             if (System.properties.containsKey('packageSuffix')) {
                 applicationIdSuffix System.getProperty('packageSuffix')
@@ -79,13 +77,13 @@ android {
         // Flag to enable support for the new language APIs
         coreLibraryDesugaringEnabled true
 
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
         encoding 'utf-8'
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_11
+        jvmTarget = JavaVersion.VERSION_17
     }
 
     sourceSets {
@@ -95,25 +93,33 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    packagingOptions {
+        resources {
+            // remove two files which belong to jsoup
+            // no idea how they ended up in the META-INF dir...
+            excludes += ['META-INF/README.md', 'META-INF/CHANGES',
+                         // 'COPYRIGHT' belongs to RxJava...
+                         'META-INF/COPYRIGHT']
+        }
+    }
 }
 
 ext {
-    checkstyleVersion = '10.0'
+    checkstyleVersion = '10.12.1'
 
-    androidxLifecycleVersion = '2.3.1'
-    androidxRoomVersion = '2.4.2'
-    androidxWorkVersion = '2.7.1'
+    androidxLifecycleVersion = '2.6.2'
+    androidxRoomVersion = '2.6.1'
+    androidxWorkVersion = '2.8.1'
 
     icepickVersion = '3.2.0'
-    exoPlayerVersion = '2.17.1'
-    googleAutoServiceVersion = '1.0.1'
-    groupieVersion = '2.10.0'
+    exoPlayerVersion = '2.18.7'
+    googleAutoServiceVersion = '1.1.1'
+    groupieVersion = '2.10.1'
     markwonVersion = '4.6.2'
 
-    leakCanaryVersion = '2.5'
+    leakCanaryVersion = '2.12'
     stethoVersion = '1.6.0'
-    mockitoVersion = '4.0.0'
-    assertJVersion = '3.22.0'
 }
 
 configurations {
@@ -128,7 +134,7 @@ checkstyle {
     toolVersion = checkstyleVersion
 }
 
-task runCheckstyle(type: Checkstyle) {
+tasks.register('runCheckstyle', Checkstyle) {
     source 'src'
     include '**/*.java'
     exclude '**/gen/**'
@@ -149,20 +155,22 @@ task runCheckstyle(type: Checkstyle) {
 def outputDir = "${project.buildDir}/reports/ktlint/"
 def inputFiles = project.fileTree(dir: "src", include: "**/*.kt")
 
-task runKtlint(type: JavaExec) {
+tasks.register('runKtlint', JavaExec) {
     inputs.files(inputFiles)
     outputs.dir(outputDir)
     getMainClass().set("com.pinterest.ktlint.Main")
     classpath = configurations.ktlint
     args "src/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
-task formatKtlint(type: JavaExec) {
+tasks.register('formatKtlint', JavaExec) {
     inputs.files(inputFiles)
     outputs.dir(outputDir)
     getMainClass().set("com.pinterest.ktlint.Main")
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 afterEvaluate {
@@ -172,7 +180,7 @@ afterEvaluate {
     preDebugBuild.dependsOn runCheckstyle, runKtlint
 }
 
-sonarqube {
+sonar {
     properties {
         property "sonar.projectKey", "TeamNewPipe_NewPipe"
         property "sonar.organization", "teamnewpipe"
@@ -182,7 +190,7 @@ sonarqube {
 
 dependencies {
 /** Desugaring **/
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs_nio:2.0.4'
 
 /** NewPipe libraries **/
     // You can use a local version by uncommenting a few lines in settings.gradle
@@ -190,41 +198,39 @@ dependencies {
     // name and the commit hash with the commit hash of the (pushed) commit you want to test
     // This works thanks to JitPack: https://jitpack.io/
     implementation 'com.github.TeamNewPipe:nanojson:1d9e1aea9049fc9f85e68b43ba39fe7be1c1f751'
-    implementation 'com.github.TeamNewPipe:NewPipeExtractor:5a1873084'
+    implementation 'com.github.Stypox:NewPipeExtractor:aaf3231fc75d7b4177549fec4aa7e672bfe84015'
+    implementation 'com.github.TeamNewPipe:NoNonsense-FilePicker:5.0.0'
 
 /** Checkstyle **/
     checkstyle "com.puppycrawl.tools:checkstyle:${checkstyleVersion}"
-    ktlint 'com.pinterest:ktlint:0.44.0'
+    ktlint 'com.pinterest:ktlint:0.45.2'
 
 /** Kotlin **/
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 
 /** AndroidX **/
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.documentfile:documentfile:1.0.1'
-    implementation 'androidx.fragment:fragment-ktx:1.3.6'
-    implementation "androidx.lifecycle:lifecycle-livedata:${androidxLifecycleVersion}"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:${androidxLifecycleVersion}"
+    implementation 'androidx.fragment:fragment-ktx:1.6.2'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:${androidxLifecycleVersion}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${androidxLifecycleVersion}"
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
-    implementation 'androidx.media:media:1.5.0'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.preference:preference:1.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.media:media:1.7.0'
+    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation "androidx.room:room-runtime:${androidxRoomVersion}"
     implementation "androidx.room:room-rxjava3:${androidxRoomVersion}"
     kapt "androidx.room:room-compiler:${androidxRoomVersion}"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     // Newer version specified to prevent accessibility regressions with RecyclerView, see:
     // https://developer.android.com/jetpack/androidx/releases/viewpager2#1.1.0-alpha01
-    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
-    implementation 'androidx.webkit:webkit:1.4.0'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation "androidx.work:work-runtime:${androidxWorkVersion}"
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta02'
     implementation "androidx.work:work-runtime-ktx:${androidxWorkVersion}"
     implementation "androidx.work:work-rxjava3:${androidxWorkVersion}"
+    implementation 'com.google.android.material:material:1.11.0'
 
 /** Third-party libraries **/
     // Instance state boilerplate elimination
@@ -232,14 +238,19 @@ dependencies {
     kapt "frankiesardo:icepick-processor:${icepickVersion}"
 
     // HTML parser
-    implementation "org.jsoup:jsoup:1.14.3"
+    implementation "org.jsoup:jsoup:1.17.2"
 
     // HTTP client
-    //noinspection GradleDependency --> do not update okhttp to keep supporting Android 4.4 users
-    implementation "com.squareup.okhttp3:okhttp:3.12.13"
+    implementation "com.squareup.okhttp3:okhttp:4.12.0"
 
     // Media player
-    implementation "com.google.android.exoplayer:exoplayer:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-core:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-dash:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-database:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-datasource:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-hls:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-smoothstreaming:${exoPlayerVersion}"
+    implementation "com.google.android.exoplayer:exoplayer-ui:${exoPlayerVersion}"
     implementation "com.google.android.exoplayer:extension-mediasession:${exoPlayerVersion}"
 
     // Metadata generator for service descriptors
@@ -258,42 +269,38 @@ dependencies {
     implementation "io.noties.markwon:core:${markwonVersion}"
     implementation "io.noties.markwon:linkify:${markwonVersion}"
 
-    // File picker
-    implementation "com.nononsenseapps:filepicker:4.2.1"
-
     // Crash reporting
-    implementation "ch.acra:acra-core:5.8.4"
+    implementation "ch.acra:acra-core:5.11.3"
 
     // Properly restarting
     implementation 'com.jakewharton:process-phoenix:2.1.2'
 
     // Reactive extensions for Java VM
-    implementation "io.reactivex.rxjava3:rxjava:3.0.13"
-    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.8"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.2"
     // RxJava binding APIs for Android UI widgets
     implementation "com.jakewharton.rxbinding4:rxbinding:4.0.0"
 
     // Date and time formatting
-    implementation "org.ocpsoft.prettytime:prettytime:5.0.2.Final"
+    implementation "org.ocpsoft.prettytime:prettytime:5.0.7.Final"
 
 /** Debugging **/
     // Memory leak detection
-    implementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${leakCanaryVersion}"
-    implementation "com.squareup.leakcanary:plumber-android:${leakCanaryVersion}"
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-object-watcher-android:${leakCanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:plumber-android:${leakCanaryVersion}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android-core:${leakCanaryVersion}"
     // Debug bridge for Android
     debugImplementation "com.facebook.stetho:stetho:${stethoVersion}"
     debugImplementation "com.facebook.stetho:stetho-okhttp3:${stethoVersion}"
 
 /** Testing **/
     testImplementation 'junit:junit:4.13.2'
-    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    testImplementation "org.mockito:mockito-inline:${mockitoVersion}"
+    testImplementation 'org.mockito:mockito-core:5.6.0'
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test:runner:1.5.2"
     androidTestImplementation "androidx.room:room-testing:${androidxRoomVersion}"
-    androidTestImplementation "org.assertj:assertj-core:${assertJVersion}"
+    androidTestImplementation "org.assertj:assertj-core:3.24.2"
 }
 
 static String getGitWorkingBranch() {
@@ -309,5 +316,27 @@ static String getGitWorkingBranch() {
     } catch (IOException ignored) {
         // git was not found
         return ""
+    }
+}
+
+// fix reproducible builds
+project.afterEvaluate {
+    tasks.compileReleaseArtProfile.doLast {
+        outputs.files.each { file ->
+            if (file.toString().endsWith(".profm")) {
+                println("Sorting ${file} ...")
+                def version = ArtProfileSerializer.valueOf("METADATA_0_0_2")
+                def profile = ArtProfileKt.ArtProfile(file)
+                def keys = new ArrayList(profile.profileData.keySet())
+                def sortedData = new LinkedHashMap()
+                Collections.sort keys, new DexFile.Companion()
+                keys.each { key -> sortedData[key] = profile.profileData[key] }
+                new FileOutputStream(file).with {
+                    write(version.magicBytes$profgen)
+                    write(version.versionBytes$profgen)
+                    version.write$profgen(it, sortedData, "")
+                }
+            }
+        }
     }
 }
